# parsergen

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md
ParserGen/: ActionMap.cpp  ActionMap.h  BNFContext.cpp  BNFContext.h  CMakeLists.txt  Cfa.cpp  Cfa.h  GrammarStrip.cpp  Output.cpp  Output.h  ParseFile.cpp  ParseFile.h  Parser.cpp  Parser.h  ParserGenBase.cpp  ParserGenBase.h  ParserIdDef.h  README.adoc  Scanner.cpp  Scanner.h  grammar.txt  main.cpp  rationale.txt  reparse  tokens.txt
ParserGen/doc/: SOP-Bootstrap.txt  issues.txt
ParserGen/ginc/: grammar.cpp  impl.cpp  impl.h
ScannerGen/: CMakeLists.txt  Context.cpp  Context.h  HandyCharset.cpp  Parser.cpp  Parser.h  ParserIdDef.h  README.adoc  RE_Suite.txt  Scanner.cpp  Scanner.h  grammar.txt  main.cpp  reparse  spec2charset.cpp  spec2charset.h  tokens.txt
example/: CMakeLists.txt
example/BisonGLR/: AST.h  CMakeLists.txt  Parser.cpp  Parser.h  ParserIdDef.h  Scanner.cpp  Scanner.h  grammar.txt  main.cpp  reparse  tokens.txt
example/CalcInt/: CMakeLists.txt  Parser.cpp  Parser.h  ParserIdDef.h  Scanner.cpp  Scanner.h  grammar.txt  main.cpp  tokens.txt
example/MinLang/: CMakeLists.txt  Parser.cpp  Parser.h  ParserIdDef.h  README.md  Scanner.cpp  Scanner.h  grammar.txt  main.cpp  reparse  tokens.txt
test/archlinux/: CMakeLists.txt  Dockerfile  PKGBUILD  docker_build  main.cpp  reparse
test/archlinux/aur_poc/: CMakeLists.txt  main.cpp  reparse
